--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -1,3 +1,3 @@
 # API keys and other configuration
-yt_api_key: YOUR_YOUTUBE_API_KEY_HERE
-deepl_api_key: YOUR_DEEPL_API_KEY_HERE
+yt_api_key: "AIzaSyAOOcJ4Ek9ZL-PjK9aSVz8wszO7VeT9_dU"
+deepl_api_key: "2ccd3f1a-9c37-4b83-b4cc-44a1d3245bdb:fx"
